; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_create_audio_things.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_create_audio_things.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chain = type { i32, i32, i32 }
%struct.mp_user_filter = type { i8*, i32, i32 }

@MP_FRAME_AUDIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"userspeed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.chain*)* @create_audio_things to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_audio_things(%struct.chain* %0) #0 {
  %2 = alloca %struct.chain*, align 8
  %3 = alloca %struct.mp_user_filter*, align 8
  store %struct.chain* %0, %struct.chain** %2, align 8
  %4 = load i32, i32* @MP_FRAME_AUDIO, align 4
  %5 = load %struct.chain*, %struct.chain** %2, align 8
  %6 = getelementptr inbounds %struct.chain, %struct.chain* %5, i32 0, i32 2
  store i32 %4, i32* %6, align 4
  %7 = load %struct.chain*, %struct.chain** %2, align 8
  %8 = call %struct.mp_user_filter* @create_wrapper_filter(%struct.chain* %7)
  store %struct.mp_user_filter* %8, %struct.mp_user_filter** %3, align 8
  %9 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %10 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %9, i32 0, i32 0
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %10, align 8
  %11 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %12 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @mp_autoaspeed_create(i32 %13)
  %15 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %16 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 8
  %17 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %18 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %1
  %22 = call i32 (...) @abort() #3
  unreachable

23:                                               ; preds = %1
  %24 = load %struct.chain*, %struct.chain** %2, align 8
  %25 = load %struct.chain*, %struct.chain** %2, align 8
  %26 = getelementptr inbounds %struct.chain, %struct.chain* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.chain*, %struct.chain** %2, align 8
  %29 = getelementptr inbounds %struct.chain, %struct.chain* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %32 = call i32 @MP_TARRAY_APPEND(%struct.chain* %24, i32 %27, i32 %30, %struct.mp_user_filter* %31)
  ret void
}

declare dso_local %struct.mp_user_filter* @create_wrapper_filter(%struct.chain*) #1

declare dso_local i32 @mp_autoaspeed_create(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @MP_TARRAY_APPEND(%struct.chain*, i32, i32, %struct.mp_user_filter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
